

RC37:
  o SW based feedback loops won't lead to endless repeated replies


RC38:
  o optimized MBNet Handler for fast external access to SID registers

  o added DEFAULT_CC32_FILTER switch to setup_*.asm - it filters CC#32 for
    programs which send this CC always together with CC#0 on bank changes

  o support for "extended SysEx dump" - see also mbsidv2_sysex_implementation.txt

  

MEMO:
  - in Bassline mode, CCs could control individual knob parameters for
    left/right channel by using the "current" assignment, and selecting
    the instrument (L-, -R or LR) via different sets of CC

  - a solution has to be found for bassline mode, how values changed
    via knobs should be properly forwarded to the edit patch storage
    for consistent value sets
    As this method has advantages and disadvantages (e.g. destructive
    changes in the edit patch are mostly NOT wanted!), maybe a soft-option
    could be provided (but I'm sure, that most people would disable it
    quickly once they noticed the disadvantages)

  - There is currently a "Notes Off" in the Shift menu which allows to
    turn off all notes of the selected SID(s)
    For more comfort, it could make sense to send this command too all
    SIDs independent from the SID selection
    In addition, a "Note On" (Play) command could also be placed into
    the Shift menu - but where? (maybe as replacement for Init Patch,
    as a patch can also be initialized by changing the engine)

  - drum engine mode: additional parameter for WT table offset?

  - individual copy/paste/clr function for drum instruments?

  - individual save function for instruments (for all engines)

  - selection of bank/patch within same screen in ENS->SID->Bnk/Pat page

  - if multiple SIDs with different engines are connected, the
    performed CS modifications (button/encoder turns) can result into
    a big mess. A fix isn't so easy (easiest but inconsistent solution: the