@@ -2475,7 +2475,7 @@ SIDSE_Filter_AOUT
 	bz	SIDSE_Filter_AOUT_NoCutOff
 #endif
 
-	;; forward IRQ_TMP[12] to channel predefined channel
+	;; forward IRQ_TMP[12] to predefined channel
 	movff	IRQ_TMP1, MIOS_PARAMETER1
 	movff	IRQ_TMP2, MIOS_PARAMETER2
 	movlw	DEFAULT_F2A_CUTOFF_L_AOUT-1
@@ -2701,6 +2701,56 @@ SIDSE_EXT_SWITCHES_FORWARD MACRO addr, flag, out
 	SIDSE_EXT_SWITCHES_FORWARD SIDR_V1_BASE + SID_Vx_STATE, SID_V_STATE_ACCENT, DEFAULT_ACCENT_OSC1_R_OUT
 	SIDSE_EXT_SWITCHES_FORWARD SIDR_V2_BASE + SID_Vx_STATE, SID_V_STATE_ACCENT, DEFAULT_ACCENT_OSC2_R_OUT
 	SIDSE_EXT_SWITCHES_FORWARD SIDR_V3_BASE + SID_Vx_STATE, SID_V_STATE_ACCENT, DEFAULT_ACCENT_OSC3_R_OUT
+
+	SET_BSR	SIDL_BASE
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_MODE_VOL, 4, DEFAULT_FILTER_LP_L_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_MODE_VOL, 5, DEFAULT_FILTER_BP_L_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_MODE_VOL, 6, DEFAULT_FILTER_HP_L_OUT
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_MODE_VOL, 4, DEFAULT_FILTER_LP_R_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_MODE_VOL, 5, DEFAULT_FILTER_BP_R_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_MODE_VOL, 6, DEFAULT_FILTER_HP_R_OUT
+
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_RES_FCHN, 0, DEFAULT_FILTER_O1_L_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_RES_FCHN, 1, DEFAULT_FILTER_O2_L_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_RES_FCHN, 2, DEFAULT_FILTER_O3_L_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_RES_FCHN, 3, DEFAULT_FILTER_EXTIN_L_OUT
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_RES_FCHN, 0, DEFAULT_FILTER_O1_R_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_RES_FCHN, 1, DEFAULT_FILTER_O2_R_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_RES_FCHN, 2, DEFAULT_FILTER_O3_R_OUT
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_RES_FCHN, 3, DEFAULT_FILTER_EXTIN_R_OUT
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V1_CTRL, 4, DEFAULT_WAVE_O1_L_TRI
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V1_CTRL, 5, DEFAULT_WAVE_O1_L_SAW
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V1_CTRL, 6, DEFAULT_WAVE_O1_L_PULSE
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V1_CTRL, 7, DEFAULT_WAVE_O1_L_NOISE
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V2_CTRL, 4, DEFAULT_WAVE_O2_L_TRI
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V2_CTRL, 5, DEFAULT_WAVE_O2_L_SAW
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V2_CTRL, 6, DEFAULT_WAVE_O2_L_PULSE
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V2_CTRL, 7, DEFAULT_WAVE_O2_L_NOISE
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V3_CTRL, 4, DEFAULT_WAVE_O3_L_TRI
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V3_CTRL, 5, DEFAULT_WAVE_O3_L_SAW
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V3_CTRL, 6, DEFAULT_WAVE_O3_L_PULSE
+	SIDSE_EXT_SWITCHES_FORWARD SIDL_BASE + SIDx_V3_CTRL, 7, DEFAULT_WAVE_O3_L_NOISE
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V1_CTRL, 4, DEFAULT_WAVE_O1_R_TRI
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V1_CTRL, 5, DEFAULT_WAVE_O1_R_SAW
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V1_CTRL, 6, DEFAULT_WAVE_O1_R_PULSE
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V1_CTRL, 7, DEFAULT_WAVE_O1_R_NOISE
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V2_CTRL, 4, DEFAULT_WAVE_O2_R_TRI
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V2_CTRL, 5, DEFAULT_WAVE_O2_R_SAW
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V2_CTRL, 6, DEFAULT_WAVE_O2_R_PULSE
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V2_CTRL, 7, DEFAULT_WAVE_O2_R_NOISE
+
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V3_CTRL, 4, DEFAULT_WAVE_O3_R_TRI
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V3_CTRL, 5, DEFAULT_WAVE_O3_R_SAW
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V3_CTRL, 6, DEFAULT_WAVE_O3_R_PULSE
+	SIDSE_EXT_SWITCHES_FORWARD SIDR_BASE + SIDx_V3_CTRL, 7, DEFAULT_WAVE_O3_R_NOISE
 
 	SET_BSR	SID_BASE			; switch BSR back to SID base
 	return
