@@ -682,6 +682,8 @@ RC38:
 
   o support for "extended SysEx dump" - see also mbsidv2_sysex_implementation.txt
 
+  o filter mode/channel and waveform flags can now be optionally passed to 
+    J5 (configuration has to be done in setup_*.asm file)
   
 
 MEMO:
